# coyote-labeler

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/: FUNDING.yml
res/layouts/: MainWindow.qml
res/layouts/MainPages/: HomeTab.qml  ProjectTab.qml
res/layouts/TestData/: TestItemList.qml
src/: main.rs  main_window.rs
src/data/: project.rs
test_project/: test_project.clp
