[package]
name = "coyote-labeler"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx = "1.0.95"
cxx-qt = "0.8"
cxx-qt-lib = { version="0.8", features = ["qt_full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json5 = "0.2"
hound = "3.5"

[build-dependencies]
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { version = "0.8", features = [ "link_qt_object_files" ] }
